Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.31
* Removed spurious commit saving orders (Chris T)
* Removed check for reversing too many sales, since this poses problems 
  in corner cases with no good solutions (Chris T)

Changelog for 1.3.30
* Documented behavior of Outstanding Summary report (Chris T, 3601314)
* Fix for translations showing multiple types (Chris T, 3601737)
* Updated gnome.css (Pongracz Istvan)
* Fixed vendor cash account link not respected in payment interface (Chris T)
* Updated INSTALL with "Actions for Fedora 18" (Havard S)
* Fixed print and save buttons on orders (Chris T, 3602071)
* Fixing history report blank when no fx (Chris T, 3602084)
* More CSS hooks (Chris T)
* Fixed DB API for reopening books (Chris T)
* Fixed menu-selected vendors and customers not working (Chris T)
* Fixed packing list not found in dropdown on invoices since 1.3 (Chris T)

Chris T is Chris Travers
Havard S is Havard Sorli


Changelog for 1.3.29
* Added db routines for role backup and restore for shared hosting
environments (Chris T, 3598924, filed by Erik H)
* Added provision in Makefile to instantiate pos.conf.pl if not exist (Chris
T, 3599945)
* Fixed errors adding shipto on invoice screen (Chris T, 3599908)
* Fixed permission denied errors adding translations (Chris T, 3599943)
* Added version number to message at top of menu (Chris T, 3600009)
* Added wrapper div around pricegroup field in contact screen to allow cssp,
Chris T.
* Fixed inverted tax numbers in vendor taxable sales report (Chris T, 3600002)
* Fixed cash/receipt and payment screen calculating to pay wrong (Chris T,
3599995)
* Fixed net-0 transactions not showing up on search (Chris T, 3600700)
* Fixed incorrect recommendation in Makefile.PL (Chris T, h.t Havard S and
Robert C)
* Fixed contact info addition workflow.  Now entering multiple contact records 
is not a total pain(Chris T)